Fix appinstalled event firing when user opens a WebAPK from banner.

The "Open" button was calling SendBannerAccepted, which made the
assumption that the app was being installed. Removed this call and
documented the method's semantics.

BUG=716313

Review-Url: https://codereview.chromium.org/2848703005
Cr-Commit-Position: refs/heads/master@{#467903}

Former-commit-id: d398f548f1929bf2a8307d02bc69065cd7cdc035